# visor-py

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml
benchmarks/: read_speed.py
visor/: __init__.py  backup.py  core.py  image.py  roi.py  transform.py  vsr.py
visor/image/: __init__.py  core.py
visor/image/tests/: test_core.py
visor/image/tests/data/VISOR001.vsr/: info.json
visor/image/tests/data/VISOR001.vsr/visor_compr_images/xxx_slice_1_10x_20241201.zarr/: .zattrs  zarr.json
visor/image/tests/data/VISOR001.vsr/visor_raw_images/: selected.json
visor/image/tests/data/VISOR001.vsr/visor_raw_images/slice_1_10x.zarr/: .zattrs  zarr.json
visor/image/tests/data/VISOR001.vsr/visor_raw_images/slice_1_10x.zarr/0/: .zarray
visor/image/tests/data/VISOR001.vsr/visor_raw_images/slice_1_10x.zarr/0/1/0/0/0/: 0
visor/image/tests/data/VISOR001.vsr/visor_raw_images/slice_1_10x_1.zarr/: .zattrs
visor/image/tests/data/VISOR001.vsr/visor_raw_images/slice_1_10x_1.zarr/0/: zarr.json
visor/tests/: bootstrapping_transform.py  test_backup.py  test_core.py  test_image.py  test_roi.py  test_transform.py  test_vsr.py
visor/tests/data/VISOR001.vsr/visor_compr_images/xxx_slice_1_10x_20241201.zarr/: zarr.json
visor/tests/data/VISOR001.vsr/visor_compr_images/xxx_slice_1_10x_20241201.zarr/0/c/0/0/0/0/: 0
visor/tests/data/VISOR001.vsr/visor_compr_images/xxx_slice_1_10x_20241201.zarr/0/c/0/1/0/0/: 0
visor/tests/data/VISOR001.vsr/visor_raw_images/: selected.json
visor/tests/data/VISOR001.vsr/visor_raw_images/slice_1_10x.zarr/: zarr.json
visor/tests/data/VISOR001.vsr/visor_raw_images/slice_1_10x_1.zarr/: zarr.json
visor/tests/data/VISOR001.vsr/visor_raw_images/slice_1_10x_1.zarr/0/c/1/0/0/0/: 0
visor/tests/data/VISOR001.vsr/visor_recon_transforms/xxx_20250525/: recon.json
visor/tests/data/VISOR001.vsr/visor_recon_transforms/xxx_20250525/slice_1_10x/: transforms.json
visor/tests/data/VISOR001.vsr/visor_recon_transforms/xxx_20250525/slice_1_10x/raw_to_ortho/: affine.tfm
visor/tests/data/VISOR001.vsr/visor_recon_transforms/xxx_20250525/slice_1_10x/raw_to_ortho/0/0/: affine.tfm
visor/transform/tests/: test_core.py
(+9 files in other folders)
