[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visor-py"
version = "2025.5.1"
description = "A Python Library for VISoR Image."
authors = [
    { name = "Zijian Yi", email = "arrowzeke@gmail.com" },
    { name = "Eddy Xiao", email = "bewantbe@gmail.com" },
]
readme = "README.md"
license = { text = "BSD" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
]
requires-python = ">=3.11"
dependencies = [
  "zarr>=3,<4",
  "zarrs>=0.1.4",
  "numcodecs>=0.16",
]
keywords = ["VISoR"]

[project.urls]
Repository = "https://github.com/visor-tech/visor-py"
